fix spacing in profile + index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -145,3 +145,6 @@ form {
   transform: translateY(-50%);
   border-radius: 10px;
 }
+.spacing{
+  height: 20px;
+}
